--- a/web/embedded/public/start-by-name.html
+++ b/web/embedded/public/start-by-name.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Start app by name</h1>
-    <canvas></canvas>
+    <canvas tabindex="1"></canvas>
     <a href="index.html">...back to index</a>
     |
     <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/start-by-name.html">
