--- a/web/embedded/public/switch-session.html
+++ b/web/embedded/public/switch-session.html
@@ -94,7 +94,7 @@
 
             emulator
                 .setCanvas(canvas)
-                .bindInput(canvas, canvas);
+                .bindInput(canvas);
 
             launchRomButton.disabled = false;
             loadSessionButton.disabled = false;
