--- a/web/embedded/public/install-and-start-zip.html
+++ b/web/embedded/public/install-and-start-zip.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Install and start from zip archive</h1>
-    <canvas></canvas>
+    <canvas tabindex="1"></canvas>
     <a href="index.html">...back to index</a>
     |
     <a
