--- a/web/embedded/public/rom-autodetect.html
+++ b/web/embedded/public/rom-autodetect.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Load ROM, autodetect device</h1>
-    <canvas></canvas>
+    <canvas tabindex="1"></canvas>
     <a href="index.html">...back to index</a>
     |
     <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/rom-autodetect.html">
