--- a/web/pwa/src/index.html
+++ b/web/pwa/src/index.html
@@ -53,6 +53,26 @@
         />
         <link
             rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-1290-2796.jpg"
+            media="(device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+        />
+        <link
+            rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-2796-1290.jpg"
+            media="(device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+        />
+        <link
+            rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-1179-2556.jpg"
+            media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+        />
+        <link
+            rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-2556-1179.jpg"
+            media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+        />
+        <link
+            rel="apple-touch-startup-image"
             href="assets-pwa/apple-splash-1284-2778.jpg"
             media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
         />
@@ -200,6 +220,26 @@
             rel="apple-touch-startup-image"
             href="assets-pwa/apple-splash-dark-2160-1620.jpg"
             media="(prefers-color-scheme: dark) and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+        />
+        <link
+            rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-dark-1290-2796.jpg"
+            media="(prefers-color-scheme: dark) and (device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+        />
+        <link
+            rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-dark-2796-1290.jpg"
+            media="(prefers-color-scheme: dark) and (device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
+        />
+        <link
+            rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-dark-1179-2556.jpg"
+            media="(prefers-color-scheme: dark) and (device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+        />
+        <link
+            rel="apple-touch-startup-image"
+            href="assets-pwa/apple-splash-dark-2556-1179.jpg"
+            media="(prefers-color-scheme: dark) and (device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)"
         />
         <link
             rel="apple-touch-startup-image"
