Use default status bar style on iOS.

--- a/web/pwa/src/index.html
+++ b/web/pwa/src/index.html
@@ -163,7 +163,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
 
         <!-- add to homescreen for ios -->
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <link rel="manifest" href="manifest.webmanifest" />
         <script>
             window.global = window;
