Another stab at fixing the status bar color.

--- a/web/pwa/src/index.html
+++ b/web/pwa/src/index.html
@@ -143,7 +143,9 @@
         <meta name="msapplication-tap-highlight" content="no" />
 
         <!-- add to homescreen for ios -->
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="theme-color" content="#000" media="(prefers-color-scheme: dark)"/>
+        <meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <link rel="manifest" href="manifest.webmanifest" />
         <script>
             window.global = window;
