--- a/web/pwa/src/index.html
+++ b/web/pwa/src/index.html
@@ -154,7 +154,7 @@
         <meta charset="utf-8" />
         <title>CloudpilotEmu</title>
         <base href="/" />
-        <meta name="color-scheme" content="light dark" />
+        <meta name="color-scheme" content="dark light" />
         <meta
             name="viewport"
             content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
