--- a/web/embedded/public/two-instances.html
+++ b/web/embedded/public/two-instances.html
@@ -71,28 +71,6 @@
 
     <script>
         (async function () {
-            function fixupXid(data) {
-                let i = 0;
-                for (; i < data.length; i++) {
-                    if (data[i] !== 0xff) break;
-                }
-
-                if (data[i++] !== 0xc0) return data;
-                if (data[i++] !== 0xff) return data;
-                if (data[i++] !== 0x3f) return data;
-                if (data[i++] !== 0x01) return data;
-
-                i += 4;
-                if (data[i++] !== 0xff) return data;
-                if (data[i++] !== 0xff) return data;
-                if (data[i++] !== 0xff) return data;
-                if (data[i++] !== 0xff) return data;
-
-                if (data[i+1] === 0xff) data[i] = 0x00;
-
-                return data;
-            };
-
             const rom1Response = await fetch('palmv.rom');
             if (!rom1Response.ok) {
                 throw new Error('could not download rom 1');
@@ -114,14 +92,18 @@
             emulator1.getSerialPortIR().setModeSync(true);
             emulator2.getSerialPortIR().setModeSync(true);
 
+            const foo = Promise.resolve();
+            const bar = Promise.resolve();
+
             emulator1.getSerialPortIR().onReceive.addHandler(({data, isFrameComplete}) => {
-                if (data) fixupXid(data);
                 if (data) console.log(Array.from(data).map(x => x.toString(16).padStart(2, '0')));
+
                 emulator2.getSerialPortIR().send(data, isFrameComplete)
+                
             });
             emulator2.getSerialPortIR().onReceive.addHandler(({data, isFrameComplete}) => {
-                if (data) fixupXid(data);
                 if (data) console.log(Array.from(data).map(x => x.toString(16).padStart(2, '0')));
+
                 emulator1.getSerialPortIR().send(data, isFrameComplete);
             });
 
