--- a/src/uarm/index.html
+++ b/src/uarm/index.html
@@ -126,16 +126,16 @@
                 <div class="control-audio-button"><button id="audio-button" disabled>Start audio</button></div>
 
                 <div class="control"><label>NOR image:</label><span id="nor-image"></span></div>
-                <button id="upload-nor">Upload NOR</button>
+                <button id="upload-nor">Load NOR</button>
 
                 <div class="control"><label>NAND image:</label><span id="nand-image"></span></div>
-                <button id="upload-nand">Upload NAND</button>
+                <button id="upload-nand">Load NAND</button>
                 <button id="clear-nand">Clear NAND</button>
-                <button id="download-nand">Download NAND</button>
+                <button id="download-nand">Save NAND</button>
 
                 <div class="control"><label>SD image:</label><span id="sd-image"></span></div>
-                <button id="upload-sd">Upload SD</button>
-                <button id="download-sd">Download SD</button>
+                <button id="upload-sd">Load SD</button>
+                <button id="download-sd">Save SD</button>
 
                 <div class="control"><label>Session</label></div>
                 <button id="export-image">Export session</button>
