SD insert / eject.

--- a/src/uarm/index.html
+++ b/src/uarm/index.html
@@ -134,8 +134,9 @@
                 <button id="download-nand">Save NAND</button>
 
                 <div class="control"><label>SD image:</label><span id="sd-image"></span></div>
-                <button id="upload-sd">Load SD</button>
+                <button id="upload-sd" disabled>Load SD</button>
                 <button id="download-sd">Save SD</button>
+                <button id="insert-eject-sd" disabled>Insert SD</button>
 
                 <div class="control"><label>Session</label></div>
                 <button id="export-image">Export session</button>
