--- a/src/uarm/index.html
+++ b/src/uarm/index.html
@@ -119,7 +119,10 @@
                     <span id="snapshot-status"></span>
                 </div>
 
-                <div class="control"><button id="rotate">Rotate</button><button id="reset">Reset</button></div>
+                <div class="control">
+                    <button id="rotate">Rotate</button><button id="reset">Reset</button
+                    ><button id="power-cycle">Power cycle</button>
+                </div>
 
                 <div class="control"><label>Emulation speed:</label><span id="speed">-</span></div>
 
