Minor styling fix.

--- a/src/uarm/index.html
+++ b/src/uarm/index.html
@@ -109,7 +109,7 @@
             }
 
             #loading-mask {
-                position: absolute;
+                position: fixed;
                 display: none;
                 justify-content: center;
                 align-items: center;
