--- a/web/pwa/src/index.html
+++ b/web/pwa/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <link
@@ -163,34 +163,34 @@
         <meta name="msapplication-tap-highlight" content="no" />
 
         <!-- add to homescreen for ios -->
-        <meta name="theme-color" content="#000" media="(prefers-color-scheme: dark)"/>
-        <meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)"/>
+        <meta name="theme-color" content="#000" media="(prefers-color-scheme: dark)" />
+        <meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)" />
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
         <link rel="manifest" href="manifest.webmanifest" />
         <script>
             window.global = window;
 
-            (function() {
+            (function () {
                 try {
-                    new RegExp("(?<=foo)bar");
+                    new RegExp('(?<=foo)bar');
                 } catch (_) {
                     const oldRegExp = window.RegExp;
 
-                    window.RegExp = function(pattern, flags) {
+                    window.RegExp = function (pattern, flags) {
                         try {
                             return new oldRegExp(pattern, flags);
                         } catch (e) {
-                            if (e && e.message && e.message.indexOf(" invalid group specifier name")) {
+                            if (e && e.message && e.message.indexOf(' invalid group specifier name')) {
                                 return new oldRegExp('deadbeef');
                             } else {
-                                throw (e);
+                                throw e;
                             }
                         }
                     };
-    
+
                     window.RegExp.prototype = oldRegExp.prototype;
                 }
-            })()
+            })();
         </script>
         <link rel="icon" type="image/png" sizes="196x196" href="assets-pwa/favicon-196.png" />
         <link rel="apple-touch-icon" href="assets-pwa/apple-icon-180.png" />
