--- a/web/pwa/assets-pwa-src/icon.html
+++ b/web/pwa/assets-pwa-src/icon.html
@@ -53,7 +53,7 @@
 
 <body>
     <div class="container">
-        <img src="cp-palmblue-001.svg"></img>
+        <img src="cp-palmblue-001.svg">
     </div>
 </body>
 
