--- a/web/pwa/assets-pwa-src/splashscreen.html
+++ b/web/pwa/assets-pwa-src/splashscreen.html
@@ -56,8 +56,8 @@
 
 <body>
     <div class="container">
-        <img class="light" src="cp-palmblue-001.svg"></img>
-        <img class="dark" src="cp-palmblue-001-bw.svg"></img>
+        <img class="light" src="cp-palmblue-001.svg">
+        <img class="dark" src="cp-palmblue-001-bw.svg">
     </div>
 </body>
 
