--- a/web/embedded/public/rom.html
+++ b/web/embedded/public/rom.html
@@ -23,11 +23,12 @@
                 const emulator = await cloudpilot.createEmulator();
                 const canvas = document.getElementsByTagName('canvas')[0];
 
-                emulator
-                    .loadRom(new Uint8Array(rom), cloudpilot.DeviceId.palmV)
-                    .setCanvas(canvas)
-                    .bindInput(canvas)
-                    .resume();
+                await emulator.loadRom(new Uint8Array(rom), cloudpilot.DeviceId.palmV);
+
+                emulator.setCanvas(canvas);
+                emulator.bindInput(canvas);
+
+                await emulator.resume();
             })().catch((e) => console.error(e));
         </script>
     </body>
