First OS5 demo works.

--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -10,6 +10,8 @@
     <body>
         <h1>CloudpilotEmu embedded samples</h1>
 
+        <h2>OS4 and earlier</h2>
+
         <ul>
             <li><a href="session.html">Load session file</a></li>
             <li><a href="rom.html">Load ROM</a></li>
@@ -23,5 +25,9 @@
             <li><a href="memory-card.html">Memory card support</a></li>
             <li><a href="serial.html">Serial port support</a></li>
         </ul>
+
+        <h2>OS5</h2>
+
+        <li><a href="rom_os5.html">Load ROM</a></li>
     </body>
 </html>
