Replicate most demos for OS5.

--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -28,6 +28,15 @@
 
         <h2>OS5</h2>
 
-        <li><a href="rom_os5.html">Load ROM</a></li>
+        <ul>
+            <li><a href="rom_os5.html">Load ROM</a></li>
+            <li><a href="session_os5.html">Load session file</a></li>
+            <li><a href="install-and-start_os5.html">Install and start a .prc</a></li>
+            <li><a href="install-and-start-zip_os5.html">Install and start from zip archive</a></li>
+            <li><a href="start-by-name_os5.html">Start app by name</a></li>
+            <li><a href="switch-session_os5.html">Switch sessions</a></li>
+            <li><a href="two-instances_os5.html">Multiple instances</a></li>
+            <li><a href="memory-card_os5.html">Memory card support</a></li>
+        </ul>
     </body>
 </html>
