--- a/web/embedded/public/install-and-start-zip_os5.html
+++ b/web/embedded/public/install-and-start-zip_os5.html
@@ -5,13 +5,16 @@
     </head>
 
     <body>
-        <h1>Load ROM</h1>
+        <h1>Install and start from zip archive</h1>
         <canvas tabindex="1"></canvas>
-        <a href="index.html">back to index</a>
+        <a href="index.html">...back to index</a>
         |
-        <a href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/rom_os5.html">
+        <a
+            href="https://github.com/cloudpilot-emu/cloudpilot-emu/blob/master/web/embedded/public/install-and-start-zip_os5.html"
+        >
             source on github
         </a>
+
         <script>
             function launchAudioOnStart(emulator) {
                 const events = ['touchstart', 'click', 'keydown'];
@@ -26,16 +29,24 @@
             (async function () {
                 const emulator = await cloudpilot.createEmulator({preloadUarm: true});
 
-                const [norResponse, nandResponse] = await Promise.all([fetch('e2-nor.bin'), fetch('e2-nand.bin')]);
-                if (!(norResponse.ok && nandResponse)) {
-                    throw new Error('could not download rom');
+                const sessionResponse = await fetch('session_os5.img');
+                if (!sessionResponse.ok) {
+                    throw new Error('could not download session file');
                 }
 
-                const nor = await norResponse.arrayBuffer();
-                const nand = await nandResponse.arrayBuffer();
+                const session = await sessionResponse.arrayBuffer();
+
+                const zipResponse = await fetch('psytexx.zip');
+                if (!zipResponse.ok) {
+                    throw new Error('could not download zip file');
+                }
+
+                const zip = await zipResponse.arrayBuffer();
+
                 const canvas = document.getElementsByTagName('canvas')[0];
 
-                await emulator.loadRom(new Uint8Array(nor), new Uint8Array(nand));
+                await emulator.loadSession(new Uint8Array(session));
+                await emulator.installFromZipfileAndLaunch(new Uint8Array(zip), 'psytexx.prc');
 
                 emulator.setCanvas(canvas);
                 emulator.bindInput(canvas);
