--- a/web/embedded/public/switch-session_os5.html
+++ b/web/embedded/public/switch-session_os5.html
@@ -116,8 +116,8 @@
 
                 launchAudioOnStart(emulator);
 
-                launchRomButton.addEventListener('click', () => {
-                    emulator
+                launchRomButton.addEventListener('click', async () => {
+                    await emulator
                         .loadRom(new Uint8Array(nor), new Uint8Array(nand))
                         .then(() => emulator.resume())
                         .catch(e => console.error(e));
@@ -125,8 +125,8 @@
                     canvas.style.visibility = 'visible';
                 });
 
-                loadSessionButton.addEventListener('click', () => {
-                    emulator
+                loadSessionButton.addEventListener('click', async () => {
+                    await emulator
                         .loadSession(new Uint8Array(image))
                         .then(() => emulator.resume())
                         .catch(e => console.error(e));
