Control handling for OS5.

--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -37,6 +37,7 @@
             <li><a href="switch-session_os5.html">Switch sessions</a></li>
             <li><a href="two-instances_os5.html">Multiple instances</a></li>
             <li><a href="memory-card_os5.html">Memory card support</a></li>
+            <li><a href="controls_os5.html">Emulator controls</a></li>
         </ul>
     </body>
 </html>
